--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "YOUR NAME"
+  title: "Jonny De La Torre"
   navbar:
     left:
       - text: "Home"
