--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,7 +12,7 @@ website:
         href: marketing-analytics.qmd
       - text: "Strategic Marketing"
         href: strategic-marketing.qmd
-      - text: "Résumé"
+      - text: "Resume"
         href: resume.qmd
 
 
